Fixed button label size being too big in article-card

--- a/frontend/src/app/article-card/article-card.component.scss
+++ b/frontend/src/app/article-card/article-card.component.scss
@@ -163,12 +163,9 @@
       }
     }
   }
-}
 
-.button {
-  font-size: calc(var(--font-size) * 1.2);
-  
-  span {
-    font-size: calc(var(--font-size) * 1.2);
+  .article-actions {
+    display: flex;
+    gap: 12px;
   }
 }
